Fixes 4285: add sort_by to /templates/uuid/errata
